# myDatabase

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  myFuncs.cpp  myFuncs.h
src/database/: database.cpp  database.h
src/files/: filehandler.cpp  filehandler.h
